--- a/styles/style.css
+++ b/styles/style.css
@@ -72,6 +72,15 @@ body {
   height: 1px;
 }
 
+.divider-2 {
+  background: linear-gradient(
+    270deg,
+    hsla(var(--hue), 65%, 88%, 0.34),
+    hsla(var(--hue), 36%, 57%, 1)
+  );
+  height: 1px;
+}
+
 .container {
   margin: 0 1.5rem;
 }
@@ -83,6 +92,10 @@ body {
 
 .section {
   padding: 5rem 0;
+}
+
+.section .title {
+  margin-bottom: 1rem;
 }
 
 /* HEADER */
@@ -182,7 +195,6 @@ nav .icon-close {
 
   position: absolute;
   right: 1.5rem;
-
 }
 
 nav.show div.icon-close {
@@ -240,4 +252,40 @@ main {
 
 #home .text p {
   margin-bottom: 2rem;
+}
+
+/* ABOUT */
+#about {
+  background: white;
+}
+#about .container {
+  margin: 0;
+}
+
+#about .image {
+  position: relative;
+}
+
+#about .image::before {
+  content: '';
+  height: 100%;
+  width: 100%;
+  background: var(--base-color-second);
+  position: absolute;
+  top: -8.3%;
+  left: -33%;
+  z-index: 0;
+}
+
+#about .image img {
+  position: relative;
+}
+
+#about .image img,
+#about .image::before {
+  border-radius: 0.25rem;
+}
+
+#about .text {
+  margin: 0 1.5rem;
 }
