--- a/styles/style.css
+++ b/styles/style.css
@@ -98,6 +98,14 @@ body {
   margin-bottom: 1rem;
 }
 
+.section header {
+  margin-bottom: 4rem;
+}
+
+.section header strong {
+  color: var(--base-color);
+}
+
 /* HEADER */
 #header {
   border-bottom: 1px solid #e4e4e4;
@@ -288,4 +296,29 @@ main {
 
 #about .text {
   margin: 0 1.5rem;
+}
+
+/* PRODUCTS */
+.cards.grid {
+  gap: 1.5rem;
+}
+
+.card {
+  padding: 3.625rem 2rem;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+  border-bottom: 0.25rem solid var(--base-color);
+  border-radius: 0.25rem 0.25rem 0 0;
+  text-align: center;
+}
+
+.card .image {
+  display: inline-block;
+  margin-bottom: 1.5rem;
+  font-size: 5rem;
+  color: var(--base-color);
+}
+
+.card .title {
+  font-size: 1.5rem;
+  margin-bottom: 0.75rem;
 }
