--- a/styles/style.css
+++ b/styles/style.css
@@ -348,6 +348,17 @@ main {
   background: white;
 }
 
+#testimonials .container {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+#testimonials header {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  margin-bottom: 0;
+}
+
 #testimonials blockquote {
   padding: 2rem;
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
@@ -381,4 +392,14 @@ main {
   object-fit: cover;
   clip-path: circle();
   margin-right: 0.5rem;
+}
+
+/* swiper plugin */
+.swiper-slide {
+  height: auto;
+  padding: 4rem 1rem;
+}
+
+.swiper-pagination-bullet-active {
+  background: var(--base-color);
 }
