--- a/styles/style.css
+++ b/styles/style.css
@@ -461,6 +461,16 @@ footer .social {
   gap: 2rem;
 }
 
+footer .social a {
+  display: inline-block;
+
+  transition: 0.3s;
+}
+
+footer .social a:hover {
+  transform: translateY(-8px);
+}
+
 /* Back to top */
 .back-to-top {
   background: var(--base-color);
